documentation 7 Pasos Esenciales para Configurar tu Hotel y Optimizar la Gestión de Mantenimiento pt2

--- a/index.mdx
+++ b/index.mdx
@@ -3,81 +3,61 @@ title: "Introduction"
 description: "Welcome to the new home for your documentation"
 ---
 
-## 7 Pasos Esenciales para Configurar tu Hotel y Optimizar la Gestión de Mantenimiento
+# 7 Pasos Esenciales para Configurar tu Hotel y Optimizar la Gestión de Mantenimiento
 
-### Objective
+## Objetivo
+Este SOP proporciona una guía paso a paso para configurar un hotel en la plataforma Neyo, optimizando así la gestión de mantenimiento.
 
-Este SOP proporciona una guía paso a paso para configurar un hotel en la plataforma Neio, optimizando así la gestión de mantenimiento.
+---
 
-### Key Steps
+## Pasos Clave
 
-**Paso 1: Configuración General** [0:09](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=9)
+1.  **Configuración General**
+    * Define la información básica de tu hotel:
+        * Nombre del hotel
+        * Ubicación
+        * Datos generales que personalizarán la plataforma.
 
-![generated-image-at-00:00:09](https://loom.com/i/91a52075783b4740be30513d53dbfb09?workflows_screenshot=true)
+2.  **Configurar Pisos**
+    * Establece la configuración de los pisos de tu hotel.
 
-- Define la información básica de tu hotel: 
-  - Nombre del hotel
-  - Ubicación
-  - Datos generales que personalizarán la plataforma.
+3.  **Configurar Elementos**
+    * Define los elementos que se pueden encontrar en tu hotel:
+        * Nombre del elemento
+        * Vida útil del elemento
+        * Categoría del elemento
+        * Mantenimiento programado (si aplica).
 
-**Paso 2: Configurar Pisos** [0:20](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=20)
+4.  **Configurar Habitaciones**
+    * Establece los diferentes tipos de habitaciones para:
+        * Reportes específicos
+        * Estadísticas futuras.
 
-![generated-image-at-00:00:20](https://loom.com/i/7f0f54926a5b4bff9207d63ae7e2569a?workflows_screenshot=true)
+5.  **Configurar Áreas Comunes**
+    * Añade las áreas comunes de tu hotel:
+        * Restaurante
+        * Lobby
+        * Piscina
+        * Otras áreas comunes para un mantenimiento integral.
 
-- Establece la configuración de los pisos de tu hotel.
+6.  **Agregar Personal**
+    * Invita a tu equipo:
+        * Técnicos
+        * Supervisores
+        * Camaristas
+    * Asigna tareas y responsabilidades a cada miembro del equipo.
 
-**Paso 3: Configurar Elementos** [0:20](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=20)
+7.  **Finalización de la Configuración**
+    * Verifica que el hotel esté completamente configurado y listo para operar.
 
-![generated-image-at-00:00:20](https://loom.com/i/7f0f54926a5b4bff9207d63ae7e2569a?workflows_screenshot=true)
+---
 
-- Define los elementos que se pueden encontrar en tu hotel: 
-  - Nombre del elemento
-  - Vida útil del elemento
-  - Categoría del elemento
-  - Mantenimiento programado (si aplica).
+## Notas de Precaución
+* Asegúrate de ingresar información precisa para evitar confusiones en la gestión.
+* Revisa cada sección antes de proceder al siguiente paso para garantizar que no falte información importante.
 
-**Paso 4: Configurar Habitaciones** [0:48](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=48)
+## Consejos para la Eficiencia
+* Utiliza plantillas para la información básica del hotel para acelerar el proceso de configuración.
+* Mantén una lista de verificación para cada paso para asegurar que no se omita ningún detalle importante.
 
-![generated-image-at-00:00:48](https://loom.com/i/82f7db9fbeaa402f894aae76e8e20e89?workflows_screenshot=true)
-
-- Establece los diferentes tipos de habitaciones para: 
-  - Reportes específicos
-  - Estadísticas futuras.
-
-**Paso 5: Configurar Áreas Comunes** [1:03](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=63)
-
-![generated-image-at-00:01:03](https://loom.com/i/6ca5ad795bd54f3497857cb50f95693a?workflows_screenshot=true)
-
-- Añade las áreas comunes de tu hotel: 
-  - Restaurante
-  - Lobby
-  - Piscina
-  - Otras áreas comunes para un mantenimiento integral.
-
-**Paso 6: Agregar Personal** [1:22](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=82)
-
-![generated-image-at-00:01:22](https://loom.com/i/cf753db1f51740409b253012a528104f?workflows_screenshot=true)
-
-- Invita a tu equipo: 
-  - Técnicos
-  - Supervisores
-  - Camaristas
-- Asigna tareas y responsabilidades a cada miembro del equipo.
-
-**Paso 7: Finalización de la Configuración** [1:22](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2?t=82)
-
-![generated-image-at-00:01:22](https://loom.com/i/cf753db1f51740409b253012a528104f?workflows_screenshot=true)
-
-- Verifica que el hotel esté completamente configurado y listo para operar.
-
-### Cautionary Notes
-
-- Asegúrate de ingresar información precisa para evitar confusiones en la gestión.
-- Revisa cada sección antes de proceder al siguiente paso para garantizar que no falte información importante.
-
-### Tips for Efficiency
-
-- Utiliza plantillas para la información básica del hotel para acelerar el proceso de configuración.
-- Mantén una lista de verificación para cada paso para asegurar que no se omita ningún detalle importante.
-
-<https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2>
+[Guía visual del proceso en video](https://loom.com/share/04c68c1ccad54f0ba5b0fc589875f9f2)
