style: update icons to use solid FontAwesome variants in setup steps

--- a/index.mdx
+++ b/index.mdx
@@ -14,7 +14,7 @@ Antes de empezar, ten a la mano: nombre del hotel, dirección, categorías de el
 ## Pasos Clave
 
 <Steps titleSize="h3">
-  <Step title="Paso 1 · Configuración General" icon="building-2" stepNumber={1}>
+  <Step title="Paso 1 · Configuración General" icon="building" iconType="solid" stepNumber={1}>
     Define la información fundamental de tu hotel:
     <ul>
       <li>Nombre del hotel</li>
@@ -27,14 +27,14 @@ Antes de empezar, ten a la mano: nombre del hotel, dirección, categorías de el
     </Info>
   </Step>
 
-  <Step title="Paso 2 · Configurar Pisos" icon="layers" stepNumber={2}>
+  <Step title="Paso 2 · Configurar Pisos" icon="layer-group" iconType="solid" stepNumber={2}>
     Crea la estructura de pisos tal como existe en la propiedad. Esto facilita rutas de mantenimiento y reportes.
     <Tip>
     Si tu propiedad tiene torres o edificios, considera usar un prefijo (p.ej. T1-Piso 3) para mantener claridad.
     </Tip>
   </Step>
 
-  <Step title="Paso 3 · Configurar Elementos" icon="package" stepNumber={3}>
+  <Step title="Paso 3 · Configurar Elementos" icon="box-open" iconType="solid" stepNumber={3}>
     Define los elementos que se pueden encontrar en tu hotel:
     <ul>
       <li>Nombre, <Tooltip tip="Tiempo estimado antes de sustitución o overhaul.">vida útil</Tooltip> y categoría del elemento</li>
@@ -56,7 +56,7 @@ Antes de empezar, ten a la mano: nombre del hotel, dirección, categorías de el
     </Tip>
   </Step>
 
-  <Step title="Paso 5 · Configurar Áreas Comunes" icon="layout-grid" stepNumber={5}>
+  <Step title="Paso 5 · Áreas Comunes" icon="border-all" iconType="solid" stepNumber={5}>
     Añade áreas como restaurante, lobby o piscina para llevar un mantenimiento integral y trazable.
     <Info>
     Usa descripciones breves (p.ej. “Piscina principal · 25m”) para ayudar a búsqueda y filtros.
@@ -70,7 +70,7 @@ Antes de empezar, ten a la mano: nombre del hotel, dirección, categorías de el
     </Warning>
   </Step>
 
-  <Step title="Paso 7 · Finalización y Verificación" icon="check-circle-2" stepNumber={7}>
+  <Step title="Paso 7 · Finalización y Verificación" icon="circle-check" iconType="solid" stepNumber={7}>
     Revisa que todo esté listo para operar.
     <Check>
     Criterio de salida: estructura creada, elementos críticos con mantenimiento programado, usuarios clave invitados y primer ciclo de revisión calendarizado.
