docs: translate and restructure hotel configuration guide to Spanish

--- a/index.mdx
+++ b/index.mdx
@@ -1,129 +1,75 @@
 ---
-title: "Guía de Configuración del Hotel"
-description: "Procedimiento paso a paso para configurar tu hotel en Neio.io"
+title: "SOP · Gestión del Hotel en NEIO"
+description: "Guía clara para administradores: cómo usar NEIO para optimizar operaciones y supervisar al personal."
 ---
 
-# 7 Pasos Esenciales para Configurar tu Hotel
+# Procedimiento Operativo Estándar para la Gestión del Hotel
 
-Este Procedimiento Operativo Estándar (SOP) te guía paso a paso para configurar un hotel en la plataforma Neyo y optimizar la gestión de mantenimiento desde el primer día.
+> NEIO es una plataforma de gestión de mantenimiento diseñada para hoteles, con foco en operación eficiente y experiencia del huésped.
 
-<Note>
-Antes de empezar, ten a la mano: nombre del hotel, dirección, categorías de elementos, tipos de habitaciones y correos del personal que vas a invitar.
-</Note>
+## Objective
 
-## Pasos Clave
+Este SOP proporciona una guía clara para administradores sobre cómo utilizar NEIO para optimizar operaciones y supervisar al personal.
 
-<Steps titleSize="h3">
-  <Step title="Paso 1 · Configuración General" icon="building" iconType="solid" stepNumber={1}>
-    Define la información fundamental de tu hotel:
-    <ul>
-      <li>Nombre del hotel</li>
-      <li>Ubicación / dirección</li>
-      <li>Datos generales que personalizan la plataforma</li>
-    </ul>
+## Key Steps
 
-    <Info>
-    Consejo de naming: usa el mismo nombre que aparece en tu PMS para evitar confusiones entre equipos.
-    </Info>
-  </Step>
+**1. Bienvenida a la Plataforma** [0:04](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=4)
 
-  <Step title="Paso 2 · Configurar Pisos" icon="layer-group" iconType="solid" stepNumber={2}>
-    Crea la estructura de pisos tal como existe en la propiedad. Esto facilita rutas de mantenimiento y reportes.
-    <Tip>
-    Si tu propiedad tiene torres o edificios, considera usar un prefijo (p.ej. T1-Piso 3) para mantener claridad.
-    </Tip>
-  </Step>
+![generated-image-at-00:00:04](https://loom.com/i/a9f70e4501564b01bce44c0a1ffce883?workflows_screenshot=true)
 
-  <Step title="Paso 3 · Configurar Elementos" icon="box-open" iconType="solid" stepNumber={3}>
-    Define los elementos que se pueden encontrar en tu hotel:
-    <ul>
-      <li>Nombre, <Tooltip tip="Tiempo estimado antes de sustitución o overhaul.">vida útil</Tooltip> y categoría del elemento</li>
-      <li><Tooltip tip="Actividades definidas por tiempo/uso, p.ej. trimestral o por horas de operación.">Mantenimiento programado</Tooltip> (si aplica)</li>
-    </ul>
-    <Warning>
-    No mezcles categorías (p.ej. HVAC vs. Electricidad). Una mala categorización complica los reportes y la trazabilidad.
-    </Warning>
-  </Step>
+- Accede a NEIO como administrador.
+- Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.
 
-  <Step title="Paso 4 · Configurar Habitaciones" icon="bed" stepNumber={4}>
-    Crea tipos de habitaciones y asigna sus atributos para habilitar:
-    <ul>
-      <li>Reportes específicos</li>
-      <li>Estadísticas futuras por tipo</li>
-    </ul>
-    <Tip>
-    Empieza por los tipos más vendidos y luego agrega variantes; así puedes salir en producción más rápido.
-    </Tip>
-  </Step>
+**2. Supervisión del Personal** [0:20](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=20)
 
-  <Step title="Paso 5 · Áreas Comunes" icon="border-all" iconType="solid" stepNumber={5}>
-    Añade áreas como restaurante, lobby o piscina para llevar un mantenimiento integral y trazable.
-    <Info>
-    Usa descripciones breves (p.ej. “Piscina principal · 25m”) para ayudar a búsqueda y filtros.
-    </Info>
-  </Step>
+![generated-image-at-00:00:20](https://loom.com/i/4d725f9e8e2346c6b74050c0853911d2?workflows_screenshot=true)
 
-  <Step title="Paso 6 · Agregar Personal" icon="users" stepNumber={6}>
-    Invita a tu equipo (técnicos, supervisores, camaristas) y asigna permisos y responsabilidades.
-    <Warning>
-    Asigna el <Tooltip tip="Permisos de ver/crear/editar/borrar por módulo.">rol</Tooltip> adecuado desde el inicio. Un rol demasiado amplio puede causar cambios no deseados.
-    </Warning>
-  </Step>
+- Supervisa a todo el personal operativo:
+  - Técnicos
+  - Jefes técnicos
+  - Camaristas
+  - Proveedores externos
 
-  <Step title="Paso 7 · Finalización y Verificación" icon="circle-check" iconType="solid" stepNumber={7}>
-    Revisa que todo esté listo para operar.
-    <Check>
-    Criterio de salida: estructura creada, elementos críticos con mantenimiento programado, usuarios clave invitados y primer ciclo de revisión calendarizado.
-    </Check>
-  </Step>
-</Steps>
+**3. Gestión de Permisos y Configuración** [0:34](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=34)
+
+![generated-image-at-00:00:34](https://loom.com/i/d966fdebd91240a6b7a526882a6307a7?workflows_screenshot=true)
+
+- Asigna roles y permisos adecuados a cada perfil.
+- Configura cada espacio del hotel (pisos, habitaciones, áreas comunes) según la operación real.
+
+**4. Monitoreo del Estado Operacional** [0:53](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=53)
+
+![generated-image-at-00:00:53](https://loom.com/i/9cb206a468da4a63823767ebbf01e91c?workflows_screenshot=true)
+
+- Mantén visibilidad del estado operacional:
+  - Rendimiento del personal
+  - Backlog y estado del mantenimiento
+  - Oportunidades de garantía y costos
+
+**5. Liderazgo y Eficiencia** [1:04](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=64)
+
+![generated-image-at-00:01:04](https://loom.com/i/4d539056c5b5423cac7f43211f89063d?workflows_screenshot=true)
+
+- Utiliza tableros, reportes y alertas para dirigir operaciones.
+- Establece prioridades, SLA y comunicación entre equipos.
+
+**6. Exploración de la Plataforma** [1:12](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=72)
+
+![generated-image-at-00:01:12](https://loom.com/i/3904e6599f9e4f5b82aa2b76925522ef?workflows_screenshot=true)
+
+- Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).
+- Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).
+
+## Cautionary Notes
+
+- Asegúrate de contar con permisos adecuados antes de modificar la configuración del hotel.
+- Mantén comunicación constante con el personal para alinear expectativas y flujos de trabajo.
+
+## Tips for Efficiency
+
+- Revisa periódicamente el rendimiento del personal y el cumplimiento de SLA para detectar oportunidades de mejora.
+- Usa reportes y paneles de NEIO para tomar decisiones informadas y priorizar tareas de alto impacto.
 
 ---
 
-## Notas de Precaución
-
-<Warning>
-Asegúrate de ingresar información precisa. Errores en nombres o categorías impactan búsquedas, métricas y tiempos de respuesta.
-</Warning>
-
-<Info>
-Revisa cada sección antes de pasar al siguiente paso para asegurar que no falte información importante.
-</Info>
-
----
-
-## Consejos de Eficiencia
-
-<Tip>
-Crea plantillas para información básica (nombres estándar, categorías, ciclos de mantenimiento). Te ahorra mucho tiempo al replicar en múltiples propiedades.
-</Tip>
-
-<Tip>
-Mantén una <Tooltip tip="Lista rápida con casillas para validar que nada se te pasa.">lista de verificación</Tooltip> por paso y asigna responsables por área (Operaciones, Mantenimiento, Ama de llaves).
-</Tip>
-
----
-
-## Lista de Verificación (Checklist)
-
-- [ ] Datos generales del hotel completos
-- [ ] Pisos configurados y nombrados consistentemente
-- [ ] Elementos críticos con categorías y vida útil definidas
-- [ ] Mantenimiento programado creado para equipos clave
-- [ ] Tipos de habitación listos y vinculados a pisos
-- [ ] Áreas comunes registradas con descripciones claras
-- [ ] Personal invitado con roles correctos
-- [ ] Revisión final y primer ciclo de mantenimiento calendarizado
-
----
-
-## Guía Visual (Video)
-
-<iframe
-  className="w-full aspect-video rounded-xl"
-  src="https://www.loom.com/embed/04c68c1ccad54f0ba5b0fc589875f9f2"
-  title="Configuración de hotel en Neyo"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-></iframe>
+**Video completo:** <https://loom.com/share/d7c90d14e64a428dbe62e74b90271345>
