Fix image errors

--- a/index.mdx
+++ b/index.mdx
@@ -13,16 +13,12 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
 
 ## Key Steps
 
-**1. Bienvenida a la Plataforma** [0:04](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=4)
-
-![generated-image-at-00:00:04](https://loom.com/i/a9f70e4501564b01bce44c0a1ffce883?workflows_screenshot=true)
+**1. Bienvenida a la Plataforma** 
 
 - Accede a NEIO como administrador.
 - Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.
 
-**2. Supervisión del Personal** [0:20](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=20)
-
-![generated-image-at-00:00:20](https://loom.com/i/4d725f9e8e2346c6b74050c0853911d2?workflows_screenshot=true)
+**2. Supervisión del Personal**
 
 - Supervisa a todo el personal operativo:
   - Técnicos
@@ -30,32 +26,24 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
   - Camaristas
   - Proveedores externos
 
-**3. Gestión de Permisos y Configuración** [0:34](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=34)
-
-![generated-image-at-00:00:34](https://loom.com/i/d966fdebd91240a6b7a526882a6307a7?workflows_screenshot=true)
+**3. Gestión de Permisos y Configuración** 
 
 - Asigna roles y permisos adecuados a cada perfil.
 - Configura cada espacio del hotel (pisos, habitaciones, áreas comunes) según la operación real.
 
-**4. Monitoreo del Estado Operacional** [0:53](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=53)
-
-![generated-image-at-00:00:53](https://loom.com/i/9cb206a468da4a63823767ebbf01e91c?workflows_screenshot=true)
+**4. Monitoreo del Estado Operacional** 
 
 - Mantén visibilidad del estado operacional:
   - Rendimiento del personal
   - Backlog y estado del mantenimiento
   - Oportunidades de garantía y costos
 
-**5. Liderazgo y Eficiencia** [1:04](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=64)
-
-![generated-image-at-00:01:04](https://loom.com/i/4d539056c5b5423cac7f43211f89063d?workflows_screenshot=true)
+**5. Liderazgo y Eficiencia** 
 
 - Utiliza tableros, reportes y alertas para dirigir operaciones.
 - Establece prioridades, SLA y comunicación entre equipos.
 
-**6. Exploración de la Plataforma** [1:12](https://loom.com/share/d7c90d14e64a428dbe62e74b90271345?t=72)
-
-![generated-image-at-00:01:12](https://loom.com/i/3904e6599f9e4f5b82aa2b76925522ef?workflows_screenshot=true)
+**6. Exploración de la Plataforma**
 
 - Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).
 - Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).
