Fix image errors

--- a/index.mdx
+++ b/index.mdx
@@ -60,4 +60,13 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
 
 ---
 
-**Video completo:** <https://loom.com/share/d7c90d14e64a428dbe62e74b90271345>
+## Guía Visual
+
+<iframe
+  className="w-full aspect-video rounded-xl"
+  src="https://loom.com/embed/d7c90d14e64a428dbe62e74b90271345"
+  title="Configuración de hotel en NEIO"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
