--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -117,12 +117,12 @@ Mantén una <Tooltip tip="Lista rápida con casillas para validar que nada se te
 
 ---
 
-## Guía Visual (Video)
+## Guía Visual
 
 <iframe
   className="w-full aspect-video rounded-xl"
   src="https://www.loom.com/embed/04c68c1ccad54f0ba5b0fc589875f9f2"
-  title="Configuración de hotel en Neyo"
+  title="Configuración de hotel en NEIO"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
